add/update themes

--- a/core/modules/navigation/scss/default.scss
+++ b/core/modules/navigation/scss/default.scss
@@ -14,9 +14,13 @@ $active-navigation: $orange;
 $disabled-svg-fill: $silver;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $spring-wood;
+$documentation-font: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 $link-color: $orange;
 $documentation-link-color: $orange;
 $input-text-color: $mine-shaft;
+$dependencies-list-color: $white;
+$code-frame-bg: $white;
+$code-frame-color: $white;
 
 $buttonSize: 33px;
 $gap: 2px;
