--- a/core/modules/templates/header.html
+++ b/core/modules/templates/header.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="{{assetsPath}}styleguide/modules/navigation/css/default.css">
+<link rel="stylesheet" href="{{assetsPath}}styleguide/modules/navigation/css/{{cssTheme}}.css">
