--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -224,12 +224,12 @@ $prefix: neutron;
 	bottom: -50%;
 	width: 100%;
 	height: 50%;
-	background: $bgcolor;
+	background: $code-frame-bg;
 	overflow-x: hidden;
 	overflow-y: auto;
 	padding: 20px;
 	z-index: 1;
-	color: $txtcolor;
+	color: $code-frame-color;
 	@include prefix(transition, bottom 0.5s ease-out);
 	@include prefix(box-sizing, border-box);
 
@@ -240,7 +240,7 @@ $prefix: neutron;
 	&--patterns {
 		font-size: 0.85em;
 		a {
-			color: $txtcolor;
+			color: $dependencies-list-color;
 		}
 
 		##{$prefix}-dependencies-list a {
@@ -310,7 +310,7 @@ $prefix: neutron;
 			color: $documentation-color;
 			border-radius: 0.3em;
 			border-top-left-radius: 0;
-			font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+			font-family: $documentation-font;
 			text-align: left;
 			word-spacing: normal;
 			word-break: normal;
