--- a/core/modules/navigation/scss/jazzberry.scss
+++ b/core/modules/navigation/scss/jazzberry.scss
@@ -8,7 +8,7 @@ $spring-wood: #f8f8f2;
 $flamingo: #F2671F;
 
 $bgcolor: $jazzberry-jam;
-$txtcolor: $silver;
+$txtcolor: $violet;
 $tab: $pigment-indigo;
 $tab-color: $white;
 $tab-active: $heavy-metal;
@@ -16,9 +16,13 @@ $active-navigation: $violet;
 $disabled-svg-fill: $silver;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $spring-wood;
-$link-color: $violet;
+$documentation-font: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+$link-color: $white;
 $documentation-link-color: $flamingo;
 $input-text-color: $pigment-indigo;
+$dependencies-list-color: $white;
+$code-frame-bg: $violet;
+$code-frame-color: $white;
 
 $buttonSize: 33px;
 $gap: 2px;
