--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -3,7 +3,8 @@
 		i: {
 			dependencies: {{{dependencies}}},
 			patternName: "{{patternName}}",
-			assetsPath: "{{assetsPath}}"
+			assetsPath: "{{assetsPath}}",
+			menuBehavior: "{{menuBehavior}}"
 		}
 	};
 </script>
