Fix overlay in off-canvas menu

--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -25,6 +25,10 @@ body.#{$prefix}-off-canvas {
 	&--active {
 		left: $menuWidth;
 	}
+
+	&--overflow {
+		overflow-x: hidden;
+	}
 }
 
 .#{$prefix}-sticky-nav {
