--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -17,6 +17,16 @@ $menuWidth: 173px;
 	z-index: 9999999;
 }
 
+.#{$prefix}-plus-icon {
+	background-image: url('data:image/svg+xml;utf8,<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1408 960v-128q0-26-19-45t-45-19h-320v-320q0-26-19-45t-45-19h-128q-26 0-45 19t-19 45v320h-320q-26 0-45 19t-19 45v128q0 26 19 45t45 19h320v320q0 26 19 45t45 19h128q26 0 45-19t19-45v-320h320q26 0 45-19t19-45zm256-544v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960q119 0 203.5 84.5t84.5 203.5z" fill="#ccc"/></svg>
+');
+}
+
+.#{$prefix}-minus-icon {
+	background-image: url('data:image/svg+xml;utf8,<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1408 960v-128q0-26-19-45t-45-19h-896q-26 0-45 19t-19 45v128q0 26 19 45t45 19h896q26 0 45-19t19-45zm256-544v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960q119 0 203.5 84.5t84.5 203.5z" fill="#ccc"/></svg>
+');
+}
+
 body.#{$prefix}-off-canvas {
 	@include prefix(transition, left 0.5s ease-out);
 	left: 0;
@@ -170,7 +180,7 @@ body.#{$prefix}-off-canvas {
 		height: calc(50%);
 
 		.#{$prefix}-menu--search {
-			bottom: calc(50% + 37px);;
+			bottom: calc(50% + 37px);
 		}
 	}
 }
@@ -180,7 +190,7 @@ body.#{$prefix}-off-canvas {
 	margin: 0;
 	padding-top: 10px;
 	overflow: auto;
-	height: calc(100% - 44px);
+	height: calc(100% - 44px);	
 
 	[data-item] > label {
 		color: #CCC;
@@ -192,8 +202,22 @@ body.#{$prefix}-off-canvas {
 		width: 0;
 		height: 0;
 
-		&:checked ~ ul {
-			display: block;
+		& + label {
+			@extend .#{$prefix}-plus-icon;
+			padding-left: 25px;
+			background-position: -35% 32%;
+			background-repeat: no-repeat;
+			background-size: 50% 50%;							
+		}
+
+		&:checked {
+			& ~ ul {
+				display: block;
+			}
+
+			& ~ label {
+				@extend .#{$prefix}-minus-icon;				
+			}
 		}
 	}
 
@@ -202,7 +226,7 @@ body.#{$prefix}-off-canvas {
 	}
 
 	li {
-		padding-left: 10px;
+		padding-left: 15px;
 
 		label {
 			cursor: pointer;
@@ -212,7 +236,12 @@ body.#{$prefix}-off-canvas {
 			font-family: Arial, sans-serif;
 			display: block;
 			color: orange;
+			padding-left: 15px;
 		}
+	}
+
+	& > li {
+		padding-left: 0;
 	}
 }
 
