--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -3,11 +3,14 @@
 
 $prefix: neutron;
 
-$bgcolor: #333;
-$txtcolor: #CCC;
+$bgColor: #333;
+$txtColor: #CCC;
 $tab: #CCC;
-$tab-active: #272822;
+$tabActive: #272822;
 $activeNavigation: orange;
+$linkColor: orange;
+$menuBorder: orange;
+$disabledState: #666;
 
 $buttonSize: 33px;
 $gap: 2px;
@@ -74,7 +77,7 @@ body.#{$prefix}-off-canvas {
 	height: $buttonSize;
 	color: white;
 	text-align: center;
-	background-color: $bgcolor;
+	background-color: $bgColor;
 	z-index: 2;
 	text-decoration: none !important;
 
@@ -104,7 +107,7 @@ body.#{$prefix}-off-canvas {
 		display: inline-block;
 		width: $buttonSize;
 		height: $buttonSize;
-		background-color: $bgcolor;
+		background-color: $bgColor;
 		text-align: center;
 		margin-left: 2px;
 		text-decoration: none !important;
@@ -121,7 +124,7 @@ body.#{$prefix}-off-canvas {
 		&.disabled {
 			cursor: default;
 			svg path {
-				fill: #666;
+				fill: $disabledState;
 			}
 		}
 	}
@@ -149,11 +152,11 @@ body.#{$prefix}-off-canvas {
 	width: $menuWidth;
 	top: 0;
 	height: 100%;
-	background-color: $bgcolor;
+	background-color: $bgColor;
 	margin: 0;
-	color: $txtcolor;
+	color: $txtColor;
 	padding-bottom: $buttonSize + 3px;
-	border-right: 2px solid orange;
+	border-right: 2px solid $menuBorder;
 
 	@include prefix(transition, "height 0.5s ease-out, left 0.5s ease-out");
 	@include prefix(box-sizing, border-box);
@@ -182,8 +185,28 @@ body.#{$prefix}-off-canvas {
 	overflow: auto;
 	height: calc(100% - 44px);
 
+	ul {
+		display: none;
+	}
+
+	li {
+		padding-left: 15px;
+
+		label {
+			cursor: pointer;
+			position: relative;
+			padding-left: 12px;
+		}
+
+		a {
+			font-family: Arial, sans-serif;
+			display: block;
+			color: $linkColor;
+		}
+	}
+
 	[data-item] > label {
-		color: $txtcolor;
+		color: $txtColor;
 		text-transform: uppercase;
 	}
 
@@ -194,8 +217,9 @@ body.#{$prefix}-off-canvas {
 
 		& + label::before {
 			display: inline-block;
-			position: relative;
+			position: absolute;
 			left: -10px;
+			top: 3px;
 			content: "+";
 			width: 15px;
 			height: 15px;
@@ -203,8 +227,8 @@ body.#{$prefix}-off-canvas {
 			font-weight: bold;
 			line-height: 17px;
 			text-align: center;
-			color: $bgcolor;
-			background-color: $txtcolor;
+			color: $bgColor;
+			background-color: $txtColor;
 		}
 
 		&:checked {
@@ -214,28 +238,11 @@ body.#{$prefix}-off-canvas {
 
 			& ~ label::before {
 				content: "-";
+				line-height: 14px;
 			}
 		}
 	}
 
-	ul {
-		display: none;
-	}
-
-	li {
-		padding-left: 15px;
-
-		label {
-			cursor: pointer;
-		}
-
-		a {
-			font-family: Arial, sans-serif;
-			display: block;
-			color: orange;
-
-		}
-	}
 }
 
 .#{$prefix}-menu--search {
@@ -243,7 +250,7 @@ body.#{$prefix}-off-canvas {
 
 	&__input {
 		position: relative;
-		background-color: $bgcolor;
+		background-color: $bgColor;
 		padding: 5px;
 		@include prefix(box-sizing, border-box);
 
@@ -263,12 +270,12 @@ body.#{$prefix}-off-canvas {
 	bottom: -50%;
 	width: 100%;
 	height: 50%;
-	background: $bgcolor;
+	background: $bgColor;
 	overflow-x: hidden;
 	overflow-y: auto;
 	padding: 20px;
 	z-index: 1;
-	color: $txtcolor;
+	color: $txtColor;
 	@include prefix(transition, bottom 0.5s ease-out);
 	@include prefix(box-sizing, border-box);
 
@@ -279,7 +286,7 @@ body.#{$prefix}-off-canvas {
 	&--patterns {
 		font-size: 0.85em;
 		a {
-			color: $txtcolor;
+			color: $txtColor;
 		}
 
 		##{$prefix}-dependencies-list a {
@@ -313,7 +320,7 @@ body.#{$prefix}-off-canvas {
 			}
 
 			&.active {
-				background-color: $tab-active;
+				background-color: $tabActive;
 				a {
 					color: white;
 				}
@@ -366,7 +373,7 @@ body.#{$prefix}-off-canvas {
 		width: 600px;
 		height: auto;
 		margin: -150px 0 0 -300px;
-		background-color: $bgcolor;
+		background-color: $bgColor;
 		padding: 10px;
 		@include prefix(transition, top 1s ease-out);
 		z-index: 4;
@@ -448,7 +455,7 @@ body.#{$prefix}-off-canvas {
 	width: $buttonSize;
 	height: $buttonSize;
 	background-color: white;
-	color: $bgcolor;
+	color: $bgColor;
 
 	span {
 		display: none;
@@ -458,7 +465,7 @@ body.#{$prefix}-off-canvas {
 		width: 100%;
 		height: 100%;
 		path {
-			fill: $bgcolor;
+			fill: $bgColor;
 		}
 	}
 }
