--- a/core/modules/navigation/scss/bluewood.scss
+++ b/core/modules/navigation/scss/bluewood.scss
@@ -22,7 +22,8 @@ $documentation-link-color: $flamingo;
 $input-text-color: $pickled-bluewood;
 $dependencies-list-color: $malibu;
 $code-frame-bg: $pickled-bluewood;
-$code-frame-color: $pickled-bluewood;
+$code-frame-color: $malibu;
+$lightbox-overlay-bg: rgba(0, 0, 0, 0.65);
 
 $buttonSize: 33px;
 $gap: 2px;
