--- a/core/modules/navigation/scss/jazzberry.scss
+++ b/core/modules/navigation/scss/jazzberry.scss
@@ -24,6 +24,7 @@ $input-text-color: $pigment-indigo;
 $dependencies-list-color: $white;
 $code-frame-bg: $violet;
 $code-frame-color: $white;
+$lightbox-overlay-bg: rgba(0, 0, 0, 0.65);
 
 $buttonSize: 33px;
 $gap: 2px;
