--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -22,7 +22,7 @@ body.#{$prefix}-off-canvas {
 
 	* {
 		font-size: 16px;
-		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-family: Arial, sans-serif;
 	}
 
 	pre {
@@ -162,18 +162,10 @@ body.#{$prefix}-off-canvas {
 
 		&.active {
 			left: 0;
-
-			.#{$prefix}-menu--search  {
-				left: 0;
-			}
 		}
 
 		&.#{$prefix}-frame-active {
 			height: calc(50%);
-
-			.#{$prefix}-menu--search {
-				bottom: calc(50% + 37px);
-			}
 		}
 	}
 
@@ -181,7 +173,7 @@ body.#{$prefix}-off-canvas {
 		margin: 0;
 		padding: 10px 0 0 5px !important;
 		overflow: auto;
-		height: calc(100% - 44px);
+		height: calc(100%);
 
 		[data-item] > a {
 			color: $txtcolor;
@@ -254,7 +246,12 @@ body.#{$prefix}-off-canvas {
 	}
 
 	.#{$prefix}-menu--search {
+		position: absolute;
+		top: -$buttonSize * 2;
+		left: 0;
 		z-index: 3;
+		width: 100%;
+		@include prefix(transition, top 0.5s ease-out);
 
 		&__input {
 			position: relative;
@@ -266,9 +263,27 @@ body.#{$prefix}-off-canvas {
 				border-radius: 0;
 				-webkit-appearance: none;
 				border: none;
-				width: 100%;
 				height: 33px;
 				color: $input-text-color;
+				width: 100%;
+				padding-right: 33px;
+				@include prefix(transition, width 0.5s ease-out);
+			}
+		}
+
+		&__clear {
+			position: absolute;
+			right: 10px;
+			top: 10px;
+			color: $bgcolor;
+		}
+
+		&__opened {
+			top: 0;
+
+			.#{$prefix}-menu--search__input {
+				input {
+				}
 			}
 		}
 	}
