--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -6,16 +6,25 @@
 		</svg>
 	</a>
 	<div class="neutron-menu">
-
-		<ul class="neutron-menu--items"></ul>
-
 		<div class="neutron-menu--search">
 			<div class="neutron-menu--search__input">
-				<input class="" type="search" placeholder="Search patterns">
+				<input type="text" placeholder="Search patterns">
+				<a href="javascript:;" class="neutron-menu--search__clear">&#10006;</a>
 			</div>
 		</div>
 
 		<div class="neutron-navigation">
+			<a href="javascript:;" class="neutron-button--search">
+				<span>Search</span>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+					<path d="M44.3,27.1c0-4.7-1.7-8.8-5.1-12.2c-3.4-3.4-7.4-5.1-12.2-5.1s-8.8,1.7-12.2,5.1s-5.1,7.4-5.1,12.2
+				s1.7,8.8,5.1,12.2s7.4,5.1,12.2,5.1s8.8-1.7,12.2-5.1C42.6,35.9,44.3,31.8,44.3,27.1z M64,59.1c0,1.3-0.5,2.5-1.5,3.5
+				c-1,1-2.1,1.5-3.5,1.5c-1.4,0-2.5-0.5-3.5-1.5L42.4,49.4c-4.6,3.2-9.7,4.8-15.3,4.8c-3.7,0-7.2-0.7-10.5-2.1s-6.2-3.3-8.7-5.8
+				s-4.3-5.3-5.8-8.7S0,30.7,0,27.1s0.7-7.2,2.1-10.5s3.3-6.2,5.8-8.7s5.3-4.3,8.7-5.8S23.4,0,27.1,0s7.2,0.7,10.5,2.1s6.2,3.3,8.7,5.8
+				s4.3,5.3,5.8,8.7s2.1,6.9,2.1,10.5c0,5.6-1.6,10.8-4.8,15.3l13.2,13.2C63.5,56.6,64,57.7,64,59.1z"/>
+			</svg>
+
+			</a>
 			<a href="javascript:;" class="neutron-button--code">
 				<span>Code</span>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
@@ -31,6 +40,8 @@
 				</svg>
 			</a>
 		</div>
+
+		<ul class="neutron-menu--items"></ul>
 	</div>
 </div>
 
