--- a/core/modules/navigation/scss/db.scss
+++ b/core/modules/navigation/scss/db.scss
@@ -9,7 +9,7 @@ $tab: $dixie;
 $tab-color: $white;
 $tab-active: $heavy-metal;
 $active-navigation: $black;
-$menu-border: $dixie;
+$menu-border: $black;
 $disabled-svg-fill: $white;
 $documentation-bg-color: $heavy-metal;
 $documentation-color: $white;
