git add engine partials in the correct place and add a standard to pre-defined patterns. As partials are $, patterns are $$.

--- a/core/modules/templates/index.hbs
+++ b/core/modules/templates/index.hbs
@@ -6,7 +6,7 @@
 	<title>Neutron Atomic Design Tool</title>
 
 	<!-- ENGINE CODE -->
-	{{> engineHeader}}
+	{{> $$engineHeader}}
 	<!-- END ENGINE CODE -->
 </head>
 <body>
@@ -25,7 +25,7 @@
 	</section>
 
 	<!-- ENGINE CODE -->
-	{{> engineFooter}}
+	{{> $$engineFooter}}
 	<!-- END ENGINE CODE -->
 </body>
 </html>
