--- a/src/layouts/application.hbs
+++ b/src/layouts/application.hbs
@@ -48,7 +48,7 @@
 	{{/if }}
 
 	<!-- ENGINE CODE -->
-	{{> engineHeader}}
+	{{> $$engineHeader}}
 	<!-- END ENGINE CODE -->
 
 	<!-- STYLES FOR ENGINE -->
@@ -80,7 +80,7 @@
 	{{/unless }}
 
 	<!-- ENGINE CODE -->
-	{{> engineFooter}}
+	{{> $$engineFooter }}
 	<!-- END ENGINE CODE -->
 
 	{{#if cioview}}
