--- a/src/layouts/clean.hbs
+++ b/src/layouts/clean.hbs
@@ -5,15 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>{{#if title}}{{title}}{{else}}Clean Layout{{/if}}</title>
 	<!-- NEUTRON HEADER-->
-	{{> engineHeader}}
+	{{> $$engineHeader}}
 	<!-- /NEUTRON HEADER -->
 	{{outputFor "css"}}
 </head>
 <body>
-	{{> yield }}
+	{{ $yield }}
 
 	<!-- NEUTRON FOOTER -->
-	{{> engineFooter}}
+	{{ $$engineFooter}}
 	<!-- /NEUTRON FOOTER -->
 
 </body>
