Update documentation engine to handlebars helper

--- a/src/patterns/templates/homepage.handlebars
+++ b/src/patterns/templates/homepage.handlebars
@@ -1,9 +1,9 @@
-{{!!
+{{doc "
   ## Documentation sample
   **Lorem ipsum** dolor sit amet, consectetur adipisicing elit. Voluptatem magnam, exercitationem excepturi dolor fugiat non veritatis aspernatur praesentium ipsam voluptatum quia, magni eveniet adipisci vitae blanditiis soluta quas quos quae.
 
   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla nemo perspiciatis repudiandae. Dolorem possimus sed saepe ducimus voluptatibus animi provident, magnam, labore obcaecati ab, ratione excepturi ipsam perspiciatis vel numquam corrupti repudiandae voluptas ipsa voluptatum dicta. Ad iure quia alias dolore nesciunt. Sit at nemo commodi quae dicta autem earum, fuga, accusamus, ut perferendis ipsum eveniet aspernatur officia optio non delectus numquam qui unde fugiat temporibus eos modi necessitatibus quisquam! Est quibusdam ipsum, veniam atque sunt, consequuntur! Consectetur molestias consequatur explicabo deleniti laudantium in dicta odio est maiores possimus expedita quidem veniam asperiores recusandae eos porro, assumenda quia pariatur aliquam.
-}}
+"}}
 <div class="page" id="page">
 	{{> organisms/global/header }}
 	<div role="main">
