--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -53,7 +53,8 @@
 		</a>
 	</div>
 	<div class="neutron-code-frame--patterns">
-		<p>Dependencies: <span id="neutron-dependencies-list"></span></p>
+		<p id="neutron-dependencies-list">Dependencies: <span></span></p>
+		<p id="neutron-reverse-dependencies-list">Reverse Dependencies: <span></span></p>
 	</div>
 
 	<div class="neutron-code">
