--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -2,6 +2,7 @@
 	window.neutronADT = {
 		i: {
 			dependencies: {{{dependencies}}},
+			reverseDependencies: [],
 			patternName: "{{patternName}}",
 			assetsPath: "{{assetsPath}}",
 			menuBehavior: "{{menuBehavior}}"
