add missing partial call to footer action

--- a/src/layouts/clean.hbs
+++ b/src/layouts/clean.hbs
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>{{#if title}}{{title}}{{else}}Clean Layout{{/if}}</title>
 	<!-- NEUTRON HEADER-->
-	{{> $$engineHeader}}
+	{{> $$engineHeader }}
 	<!-- /NEUTRON HEADER -->
 	{{outputFor "css"}}
 </head>
@@ -13,7 +13,7 @@
 	{{ $yield }}
 
 	<!-- NEUTRON FOOTER -->
-	{{ $$engineFooter}}
+	{{> $$engineFooter }}
 	<!-- /NEUTRON FOOTER -->
 
 </body>
