--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -21,8 +21,8 @@ body.#{$prefix}-off-canvas {
 ##{$prefix} {
 	z-index: $z-index;
 
-	*:not(pre > *) {
-		font-size: 16px;
+	* {
+		font-size: 14px;
 		font-family: Arial, sans-serif;
 	}
 
@@ -235,7 +235,7 @@ body.#{$prefix}-off-canvas {
 				display: inline-block;
 				position: absolute;
 				left: -10px;
-				top: 4px;
+				top: 3px;
 				content: "\2795";
 				width: 12px;
 				height: 12px;
@@ -291,7 +291,7 @@ body.#{$prefix}-off-canvas {
 		&__clear {
 			position: absolute;
 			right: 10px;
-			top: 10px;
+			top: 11px;
 			color: $bgcolor;
 		}
 
