Add theme change button to navigation

--- a/core/modules/templates/header.html
+++ b/core/modules/templates/header.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="{{assetsPath}}styleguide/modules/navigation/css/{{cssTheme}}.css">
+<link rel="stylesheet" class="neutron-theme-stylesheet" href="{{assetsPath}}styleguide/modules/navigation/css/{{cssTheme}}.css">
