--- a/core/modules/navigation/scss/_navigation.scss
+++ b/core/modules/navigation/scss/_navigation.scss
@@ -281,7 +281,7 @@ body.#{$prefix}-off-canvas {
 				height: 33px;
 				color: $input-text-color;
 				width: 100%;
-				padding-right: 33px;
+				padding-right: $buttonSize;
 				@include prefix(transition, width 0.5s ease-out);
 				outline: none;
 				padding: 4px;
@@ -297,6 +297,35 @@ body.#{$prefix}-off-canvas {
 
 		&__opened {
 			top: 0;
+		}
+	}
+
+	.#{$prefix}-menu--theme {
+		position: absolute;
+		top: -$buttonSize * 2;
+		left: 0;
+		z-index: $z-index + 7;
+		width: 100%;
+		@include prefix(transition, top 0.5s ease-out);
+
+		&__opened {
+			top: 0;
+		}
+
+		&__select {
+			position: relative;
+			background-color: $bgcolor;
+			padding: 5px;
+			@include prefix(box-sizing, border-box);
+
+			select {
+				border-radius: 0;
+				height: 33px;
+				color: $input-text-color;
+				width: 100%;
+				outline: none;
+				padding: 4px;
+			}
 		}
 	}
 
