--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -13,6 +13,16 @@
 			</div>
 		</div>
 
+		<div class="neutron-menu--theme">
+			<div class="neutron-menu--theme__select">
+				<select name="" id="">
+					<option value="default">Default</option>
+					<option value="bluewood">BlueWood</option>
+					<option value="db">DB</option>
+				</select>
+			</div>
+		</div>
+
 		<div class="neutron-navigation">
 			<a href="javascript:;" class="neutron-button--search">
 				<span>Search</span>
@@ -37,6 +47,12 @@
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
 					<path d="M17.5,47v5.8h-5.8V47H17.5z M17.5,12.1v5.8h-5.8v-5.8H17.5z M52.4,12.1v5.8h-5.8v-5.8H52.4z
 					M5.8,58.6h17.5V41.2H5.8V58.6z M5.8,23.7h17.5V6.2H5.8V23.7z M40.7,23.7h17.5V6.2H40.7V23.7z M29.1,35.3v29.1H0V35.3H29.1z M52.4,58.6v5.8h-5.8v-5.8H52.4z M64,58.6v5.8h-5.8v-5.8H64z M64,35.3v17.5H46.5V47h-5.8v17.5h-5.8V35.3h17.5v5.8h5.8v-5.8H64z M29.1,0.4v29.1H0V0.4H29.1z M64,0.4v29.1H34.9V0.4H64z"/>
+				</svg>
+			</a>
+			<a href="javascript:;" class="neutron-button--theme">
+				<span>Themes</span>
+				<svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
+					<path d="M1615 0q70 0 122.5 46.5t52.5 116.5q0 63-45 151-332 629-465 752-97 91-218 91-126 0-216.5-92.5t-90.5-219.5q0-128 92-212l638-579q59-54 130-54zm-909 1034q39 76 106.5 130t150.5 76l1 71q4 213-129.5 347t-348.5 134q-123 0-218-46.5t-152.5-127.5-86.5-183-29-220q7 5 41 30t62 44.5 59 36.5 46 17q41 0 55-37 25-66 57.5-112.5t69.5-76 88-47.5 103-25.5 125-10.5z"/>
 				</svg>
 			</a>
 		</div>
